--- a/themes/bw-monochrome/src/css/atoms/button.css
+++ b/themes/bw-monochrome/src/css/atoms/button.css
@@ -38,7 +38,6 @@ BUTTON
 .a-button:focus-visible {
   border-color: var(--blue-30);
   box-shadow: none;
-  color: var(--white);
 }
 
 .a-button:active {
@@ -77,6 +76,7 @@ BUTTON
 
   .a-button:hover,
   .a-button:focus {
+    background-color: var(--white);
     color: var(--black);
   }
 
